# cobrapy

./: .coveragerc  .coveralls.yml  .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL  INSTALL.md  INSTALL.rst  MANIFEST.in  README  README.md  README.rst  TODO  Untitled.ipynb  Untitled1.ipynb  appveyor.yml  bench_double.py  config.sh  conftest.py  coverage.sh  deploy.sh  develop-requirements.txt  ez_setup.py  gapfill_multi.py  index.html  index.xml  make-mac-wheels.sh  params.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.xml  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.rst
appveyor/: build_glpk.py
benchmarks/: cobra-cameo-merge-benchmarks-before-merge.ipynb  cobra-cameo-merge-benchmarks.ipynb  geometric_fba.ipynb  objective_benchmark.ipynb  parallel_fva.ipynb  single_gene_deletion_linear_room.ipynb  single_gene_deletion_room.ipynb
cobra/: CHANGE_LOG  INSTALL  README  TODO  VERSION  __init__.py  clean.sh  config.py  exceptions.py  parallel.py  setup.py  test_all.py  util.py  version.py
css/: prism.css  styles.css
documentation/: Makefile  autodoc.bat  autodoc.sh  cobra.core.rst  cobra.flux_analysis.rst  cobra.io.rst  cobra.test.rst  conf.py
documentation_builder/: .gitignore  01_create_model.rst  02_read_simulate_write.rst  03_single_deletion.rst  04_change_objective.rst  05_add_reactions.rst  06_ice_cream_milp.rst  07_double_deletion.rst  Makefile  autodoc.bat  autodoc.sh  building_model.ipynb  building_model.rst  cobra.core.rst  cobra.design.rst  cobra.external.rst  cobra.flux_analysis.rst  cobra.io.rst  cobra.manipulation.rst  cobra.media.rst  cobra.mlab.rst  cobra.rst  cobra.solvers.rst  cobra.stats.rst  cobra.test.rst  cobra.topology.rst  cobra.util.rst  conf.py  configuration.ipynb  consistency.ipynb  constraints_objectives.ipynb  deletions.ipynb  deletions.rst  dfba.ipynb  escher.ipynb  escher.rst  faq.ipynb  faq.rst  gapfilling.ipynb  gapfilling.rst  (+34 more)
examples/: building_model.py  deletions.py  escher.py  gapfilling.py  getting_started.py  io.py  loopless.py  milp.py  phenotype_phase_plane.py  qp.py  simulating.py
images/: cobra_pie.ai  cobra_snake_head.eps
intro/: index.xml
js/: prism.js
manylinux_builder/: Dockerfile  README.md  build_cobrapy.sh  run_cobrapy_builder.sh
pubs/: index.html  index.xml
release-notes/: 0.10.0.md  0.10.1.md  0.11.0.md  0.11.1.md  0.11.2.md  0.11.3.md  0.12.0.md  0.12.1.md  0.13.0.md  0.13.1.md  0.13.2.md  0.13.3.md  0.13.4.md  0.14.0.md  0.14.1.md  0.14.2.md  0.15.0.md  0.15.1.md  0.15.2.md  0.15.3.md  0.15.4.md  0.16.0.md  0.17.0.md  0.17.1.md  0.18.0.md  0.18.1.md  0.19.0.md  0.20.0.md  0.21.0.md  0.22.0.md  0.22.1.md  0.23.0.md  0.24.0.md  0.25.0.md  0.26.0.md  0.26.1.md  0.26.2.md  0.26.3.md  0.28.0.md  0.29.0.md  (+11 more)
releases/: index.html  index.xml
scripts/: compare-benchmark.py  deploy-test.sh  deploy.sh  deploy_cobra.sh  deploy_website.sh  prepare_notes.sh  publish_release.py  publish_releases.py  setup.sh
(+1074 files in other folders)
