[bumpversion]
current_version = 0.22.0
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = cobra
url = https://opencobra.github.io/cobrapy
download_url = https://pypi.org/project/cobra
project_urls = 
	Source Code = https://github.com/opencobra/cobrapy
	Documentation = https://cobrapy.readthedocs.io
	Bug Tracker = https://github.com/opencobra/cobrapy/issues
author = The cobrapy core development team.
author_email = cobra-pie@googlegroups.com
maintainer = Moritz E. Beber
maintainer_email = moritz.beber@gmail.com
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-2.0-or-later OR GPL-2.0-or-later
description = COBRApy is a package for constraint-based modeling of metabolic networks.
long_description = file: README.rst, INSTALL.rst
long_description_content_type = text/x-rst
keywords = 
	metabolism
	biology
	constraint-based
	linear programming
	mixed-integer
	optimization
	flux-balance analysis
	reconstruction

[options]
zip_safe = True
install_requires = 
	appdirs ~=1.4
	depinfo
	diskcache ~=5.0
	future
	httpx ~=0.14
	importlib_resources
	numpy ~=1.13
	optlang ~=1.5
	pandas ~=1.0
	pydantic ~=1.6
	python-libsbml ==5.19.0
	rich >=8.0
	ruamel.yaml ~=0.16
	swiglpk
tests_require = 
	tox
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src

[options.package_data]
cobra = 
	io/*.json
	test/data/*

[options.extras_require]
array = 
	scipy
development = 
	black
	bumpversion
	isort
	tox

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values = 
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/cobra/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
